fix detail overflow
fix detail overflow bug in input post detail and every detail space

--- a/wwwroot/css/post/post.css
+++ b/wwwroot/css/post/post.css
@@ -294,3 +294,13 @@ html {
     text-decoration: none;
     color: #000; 
 }
+
+.inp_detail {
+    overflow: hidden;
+}
+
+.detail {
+    overflow-y: auto;
+    word-wrap: break-word;     /* Breaks long words */
+  }
+  
